--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="center-content">
        <img src="https://i.ibb.co/QcwBWzh/IMG-20241009-WA0000.jpg" border="0" alt="Profile" class="circular-image">
         <h1>Welcome to Coder Station</h1>
-        <a href="https://m.youtube.com/shorts/KQ3KEWZ5hU0">Visit My Channel</a>
+        <a href="https://m.youtube.com/shorts/KQ3KEWZ5hU0" target="_blank">Visit My Channel</a>
         <p class="subscribe-text">Your 1 view, subscribe means a lot <span class="sad-face">☹️</span></p>
     </div>
 
